--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1, viewport-fit=cover"
   />
-  <title>Chandra Prakash Bathula | Resume</title>
+  <title>Ramya Durga Tanniru | Resume</title>
 
   <!-- AOS (Animate On Scroll) -->
   <link
@@ -47,7 +47,7 @@
   <!-- HERO -->
   <header id="hero">
     <div class="container hero-content" data-aos="fade-down">
-      <h1>Chandra Prakash Bathula</h1>
+      <h1>Ramya Durga Tanniru</h1>
       <p class="contact-line">
         <i class="fas fa-map-marker-alt"></i> Saint Louis, MO | 
         <i class="fas fa-envelope"></i>
