--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- NAVIGATION -->
   <nav id="navbar">
     <div class="container">
-      <a href="#hero" class="logo">CPB</a>
+      <a href="#hero" class="logo">RD</a>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#research">Research</a></li>
